--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
 
 /* Style the body */
 body {
-  background-color: #143f6b;
+  background-color: #289d24; /* Zelda Green*/
   margin: 0;
   min-height: 100vh;
   display: flex;
