--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
 
 /* Style the body */
 body {
-  background-color: #289d24; /* Zelda Green*/
+  background-color: #FE0002; /* Mario Red */
   margin: 0;
   min-height: 100vh;
   display: flex;
@@ -28,8 +28,9 @@ body {
 .white {
   width: 100px;
   height: 400px;
-  background-color: white;
-  border: 1px solid #333;
+  background-color: #fff;
+  border: 3px solid #333;
+  box-shadow: inset -4px -4px #ccc;
 }
 
 .black {
